Fix button spacing in mobile devices

--- a/style.css
+++ b/style.css
@@ -50,20 +50,19 @@ body {
 .button-container{
   margin-top: 15px;
   display: flex;
-  justify-content: space-around;
-  align-self: center;
+  justify-content: space-between;
 }
 
 button{
   cursor: pointer;
-  font-size: 1.2rem;
-  height: 2.5rem;
+  font-size: 1.1rem;
+  height: 2rem;
   border: none;
   border-radius: 10px;
   color: #fff;
   background:#333 ;
   outline: none;
-  padding: 0.5rem 1.8rem;
+  padding: 0.3rem 1.2rem;
   box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
 }
 
